# sudoku-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  model.rs  solver.rs  tokenizer.rs
testdata/: 1.json
