[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
image = "0.24.7"
leptess = "0.14.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
